# RWAHUB

./: .coverage  .env.example  .gitignore  VERSION  app.db  app.py  check_db.py  config.py  package-lock.json  package.json  pyproject.toml  requirements-test.txt  requirements.txt  run.py  setup.py  wsgi.py
58hub.egg-info/: PKG-INFO  SOURCES.txt
app/: .__init__.py.swp  __init__.py  middleware.py
app/blockchain/: client.py  contracts.py
app/models/: __init__.py  asset.py  dividend.py  trade.py  user.py
app/routes/: __init__.py  admin.py  api.py  assets.py  auth.py  main.py  views.py
app/static/contracts/: AssetToken.json
app/static/css/: admin.css
app/static/js/: AssetTokenABI.js  USDCABI.js  USDTABI.js  auth-service.js  config.js
app/templates/: base.html  index.html  index.html.bak
app/utils/: __init__.py  decorators.py  version.py
contracts/solidity/: .AssetFactory.sol.swp  AssetFactory.sol  AssetToken.sol
instance/: app.db
migrations/versions/: 16b15760117c_add_token_address_to_asset_model.py  1cc75a9b49bb_add_reject_reason_to_assets_table.py  50dfa0f594b7_initial_migration.py  5933b2321554_add_annual_revenue_field.py  d0ca9d0a8873_add_description_and_token_code_fields_.py  daffc34d2f3d_recreate_initial_migration.py  ed553a7a0386_add_is_self_trade_field_to_trades_table.py  fec988f5e053_add_contract_address_field.py
scripts/: compile_contracts.py  create_files.py  create_test_data.py  download_test_images.py  init_db.py  update_files.py
tests/: conftest.py  test_api.py  test_basic.py  test_contracts.py  test_models.py
(+14 files in other folders)
